Se agrega funcion para descargar archivos pdf y xml con bugs
